--- a/CognativeSurveyX/CognativeSurveyX/MainPage2.xaml
+++ b/CognativeSurveyX/CognativeSurveyX/MainPage2.xaml
@@ -2,7 +2,9 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:CognativeSurveyX"
-             x:Class="CognativeSurveyX.MainPage2"             >
+             x:Class="CognativeSurveyX.MainPage2"  
+             
+             >
     <StackLayout VerticalOptions="StartAndExpand" HorizontalOptions="FillAndExpand" >
         <StackLayout BackgroundColor="Aqua" HorizontalOptions="FillAndExpand" Padding="20">
             <Label Text="Cognative TouchPoint"
