--- a/CognativeSurveyX/CognativeSurveyX/ProjectPage.xaml
+++ b/CognativeSurveyX/CognativeSurveyX/ProjectPage.xaml
@@ -1,15 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="CognativeSurveyX.ProjectPage">
+             x:Class="CognativeSurveyX.ProjectPage"
+             Title="Cognative TouchPoint"
+             >
     <StackLayout VerticalOptions="StartAndExpand" HorizontalOptions="FillAndExpand" >
-        <StackLayout BackgroundColor="Aqua" HorizontalOptions="FillAndExpand" Padding="20">
+        <!-- <StackLayout BackgroundColor="Aqua" HorizontalOptions="FillAndExpand" Padding="20">
             <Label Text="Cognative TouchPoint"
                    FontAttributes="Bold"
                HeightRequest="20"
               HorizontalOptions="CenterAndExpand"
            VerticalOptions="CenterAndExpand" />
-        </StackLayout>
+        </StackLayout>-->
         <StackLayout x:Name="myLayout" Margin="10,10,10,10" Padding="10,10,10,10">
             <!-- Unified Design -->
 
