--- a/CognativeSurveyX/CognativeSurveyX/Fregments/FPage.xaml
+++ b/CognativeSurveyX/CognativeSurveyX/Fregments/FPage.xaml
@@ -1,12 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+              xmlns:forms="clr-namespace:Lottie.Forms;assembly=Lottie.Forms" 
              x:Class="CognativeSurveyX.Fregments.FPage">
     <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
+        <StackLayout HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand" BackgroundColor="Red">
+            <Label Text="Betöltés....."/>
+            
+
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
