--- a/CognativeSurveyX/CognativeSurveyX/Fregments/FMaxDiff.xaml
+++ b/CognativeSurveyX/CognativeSurveyX/Fregments/FMaxDiff.xaml
@@ -16,6 +16,7 @@
                 </StackLayout>
                 <StackLayout x:Name="myLayout">
                     <!-- Unified Design -->
+                    <ActivityIndicator x:Name="ai" IsRunning="{Binding isBusy}" HorizontalOptions="Center" VerticalOptions="Center" Color="Blue"/>
 
 
 
@@ -31,7 +32,7 @@
         </StackLayout>
 
 
-
+        
     </ContentPage.Content>
 
 </ContentPage>
